Новый домен статистика
- выделения в отдельный модуль домена результатов
- добавления модуля статистики
- добавления фронтенда для статистики